# ccaudio

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: lint.yml  lint_and_test.yml
src/ccaudio/: __init__.py  items.py  load_shar_sample.py  main.py  pipelines.py  preprocess.py  settings.py  spiders.py
src/ccaudio/ccaudio_downloader/: scrapy.cfg
src/ccaudio/ccaudio_downloader/ccaudio_downloader/: items.py  language_data.csv  middlewares.py  pipelines.py  settings.py
src/ccaudio/ccaudio_downloader/ccaudio_downloader/spiders/: ccaudio_spider.py
src/ccaudio/download/: downloader.py  items.py  main.py  pipelines.py  scrapy_pipelines.py  scrapy_settings.py  scrapy_spider.py  settings.py  spider.py  util.py
src/ccaudio/download/spiders/: ccaudio.py
src/ccaudio/extract_url/: __init__.py  cc2url.py  goodhtml2audio.py  html2goodhtml.py  html_based.statistics.py  json2parquet.py  rss2audio.py  rss_based_statistics.py  tmp.py  url2html.py
src/ccaudio/preprocess/: convert_audio.py  filter_lang_prob.py  main.py  whisper_detect_lang.py  whisper_transcribe.py
src/ccaudio/preprocess/pipeline/: convert_audio.py  filter_lang_prob.py  whisper_detect_lang.py  whisper_transcribe.py
src/ccaudio/spiders/: ccaudio.py
tests/: test_demucs.py  test_preprocess.py
tests/preprocess/: test_convert_audio.py  test_whisper_detect_lang.py  test_whisper_transcribe.py
tests/preprocess/pipeline/: test_convert_audio.py  test_whisper_detect_lang.py  test_whisper_transcribe.py
