[project]
name = "ccaudio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kohei ASAI", email = "ko2001he@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chardet>=5.2.0",
    "datasets>=4.0.0",
    "demucs",
    "lhotse>=1.30.3",
    "loguru>=0.7.3",
    "matplotlib>=3.9.4",
    "numpy<2.0",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pydub>=0.25.1",
    "requests>=2.32.5",
    "scrapy>=2.13.3",
    "tldextract>=5.3.0",
    "trafilatura>=2.0.0",
    "warcio>=1.7.5",
]

[project.scripts]
ccaudio = "ccaudio:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.ruff]
exclude = [".venv"]
indent-width = 4
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "-vv --tb=short -s"

[tool.uv.sources]
torch = { index = "torch-aarch", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'"}
torchaudio = { index = "torch-aarch", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'"}
demucs = { git = "https://github.com/adefossez/demucs" }

[[tool.uv.index]]
name = "torch-aarch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
